fix square root distortion in dynamically appearing mini wiggis

--- a/components/corespring/navigator/src/client/styles.less
+++ b/components/corespring/navigator/src/client/styles.less
@@ -3,7 +3,6 @@
 .navigator {
 
   .navigator-container {
-    overflow: hidden;
     height: 100%;
 
     .nav {
